--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@
       <!-- /.row -->
 
       <!-- Team Members -->
-      <h2>Our Team</h2>
+      <h2>Lilly Goals</h2>
 
       <div class="row">
         <div class="col-lg-4 mb-4">
           <div class="card h-100 text-center">
             <img class="card-img-top" src="http://placehold.it/750x450" alt="">
             <div class="card-body">
-              <h4 class="card-title">Team Member</h4>
+              <h4 class="card-title">Team Member1</h4>
               <h6 class="card-subtitle mb-2 text-muted">Position</h6>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
             </div>
@@ -131,7 +131,7 @@
           <div class="card h-100 text-center">
             <img class="card-img-top" src="http://placehold.it/750x450" alt="">
             <div class="card-body">
-              <h4 class="card-title">Team Member</h4>
+              <h4 class="card-title">Team Member2</h4>
               <h6 class="card-subtitle mb-2 text-muted">Position</h6>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
             </div>
@@ -144,7 +144,7 @@
           <div class="card h-100 text-center">
             <img class="card-img-top" src="http://placehold.it/750x450" alt="">
             <div class="card-body">
-              <h4 class="card-title">Team Member</h4>
+              <h4 class="card-title">Team Member3</h4>
               <h6 class="card-subtitle mb-2 text-muted">Position</h6>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus aut mollitia eum ipsum fugiat odio officiis odit.</p>
             </div>
@@ -179,7 +179,6 @@
         </div>
       </div>
       <!-- /.row -->
-
     </div>
     <!-- /.container -->
 
